--- a/client/package.json
+++ b/client/package.json
@@ -1,14 +1,24 @@
 {
-  "name": "peepal_ui",
+  "name": "client",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
-    "@testing-library/user-event": "^12.7.3",
+    "@testing-library/user-event": "^12.6.3",
+    "axios": "^0.21.1",
+    "http-proxy-middleware": "^1.0.6",
     "react": "^17.0.1",
+    "react-confirm-alert": "^2.7.0",
     "react-dom": "^17.0.1",
-    "react-scripts": "4.0.3",
+    "react-markdown": "^5.0.3",
+    "react-redux": "^7.2.2",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "4.0.2",
+    "redux": "^4.0.5",
+    "redux-form": "^8.3.7",
+    "redux-thunk": "^2.3.0",
+    "remark-gfm": "^1.0.0",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
